Project

General

Profile

Actions

Bug #47614

closed

Alloca.h is not available on FreeBSD

Added by Willem Jan Withagen over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

src/librbd/crypto/BlockCrypto.cc:5:10: fatal error: 'alloca.h' file not found
#include <alloca.h>
         ^~~~~~~~~~
1 error generated.

Including <stdlib.h> is enough

Actions #1

Updated by Jason Dillaman about 3 years ago

  • Status changed from New to Resolved

Commit 32dd5c707e5

Actions

Also available in: Atom PDF